Add LAPACK and BLAS libraries to link flag in Makefiles (you need to change this line: use the directory where you installed LAPACK)

--- a/src/MAKE/Makefile.serial
+++ b/src/MAKE/Makefile.serial
@@ -13,7 +13,7 @@ DEPFLAGS =	-M
 
 LINK =		g++
 LINKFLAGS =	-g -O
-LIB = 
+LIB =-L /mnt/c/Users/SitlapersadRS/tools/lapack-3.9.0 -llapack -lrefblas -lgfortran 
 SIZE =		size
 
 ARCHIVE =	ar
