--- a/src/MAKE/Makefile.mpi
+++ b/src/MAKE/Makefile.mpi
@@ -13,7 +13,7 @@ DEPFLAGS =	-M
 
 LINK =		mpicxx
 LINKFLAGS =	-g -O3
-LIB = 
+LIB =-L /mnt/c/Users/SitlapersadRS/tools/lapack-3.9.0 -llapack -lrefblas -lgfortran 
 SIZE =		size
 
 ARCHIVE =	ar
